Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,7 @@
 trigger:
   branches:
     include:
-      - feature  # Replace with your actual feature branch name
+      - main
   paths:
     include:
       - scripts/*
